[gd_scene load_steps=10 format=2]

[ext_resource path="res://Musics/Musics/MainMenuCyberTyper.mp3" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.211765, 0.211765, 0.211765, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.12549, 0.12549, 0.12549, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0392157, 0.0392157, 0.0392157, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.180392, 0.180392, 0.180392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0705882, 0.0705882, 0.0705882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.345098, 0.345098, 0.345098, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.117647, 0.117647, 0.117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.345098, 0.345098, 0.345098, 1 )

[sub_resource type="Animation" id=6]
resource_name = "Idle"
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath("Cyber:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Cyber:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4.5, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 4.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cyber:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 76 ), Vector2( 164.5, 71 ), Vector2( 149.5, 84 ), Vector2( 152, 73.5 ), Vector2( 166, 85 ), Vector2( 142.5, 77 ), Vector2( 170, 75 ), Vector2( 156.5, 83.5 ), Vector2( 161, 73 ), Vector2( 149.5, 78 ), Vector2( 160, 76 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("H1/play:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("H1/play:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("H1/play:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 149, 157 ), Vector2( 151, 155.5 ), Vector2( 140, 156.5 ), Vector2( 143, 163 ), Vector2( 142, 157.5 ), Vector2( 140, 161 ), Vector2( 149, 154 ), Vector2( 144, 157.5 ), Vector2( 153, 160 ), Vector2( 147.5, 155.5 ), Vector2( 149, 157 ) ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("H1/options:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("H1/options:rect_scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0, 1.8, -0.25, 0, 0.25, 0, 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("H1/options:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 149, 211 ), Vector2( 143.5, 208.5 ), Vector2( 153, 207 ), Vector2( 146, 212.5 ), Vector2( 145.5, 207 ), Vector2( 134.5, 211 ), Vector2( 141.5, 205.5 ), Vector2( 146, 214 ), Vector2( 142, 209.5 ), Vector2( 150, 204.5 ), Vector2( 149, 211 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Cyber:rect_scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 4.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Cyber:rect_scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 4.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cyber:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 160, 76 ) ]
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("H1/play:rect_scale:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("H1/play:rect_scale:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("H1/play:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 149, 157 ) ]
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("H1/options:rect_scale:x")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/7/type = "bezier"
tracks/7/path = NodePath("H1/options:rect_scale:y")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"points": PoolRealArray( 1.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/8/type = "value"
tracks/8/path = NodePath("H1/options:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 149, 211 ) ]
}

[node name="Menu" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 404.0
margin_bottom = 304.0
color = Color( 0, 0, 0, 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true

[node name="H1" type="Node2D" parent="."]

[node name="play" type="Button" parent="H1"]
margin_left = 149.0
margin_top = 157.0
margin_right = 249.0
margin_bottom = 182.0
rect_min_size = Vector2( 100, 25 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 12.5 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Play"

[node name="options" type="Button" parent="H1"]
margin_left = 149.0
margin_top = 211.0
margin_right = 249.0
margin_bottom = 236.0
rect_min_size = Vector2( 100, 25 )
rect_scale = Vector2( 1.5, 1.5 )
rect_pivot_offset = Vector2( 50, 12.5 )
focus_mode = 0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Options"

[node name="H2" type="Node2D" parent="."]
visible = false

[node name="GridContainer" type="GridContainer" parent="H2"]
margin_top = 136.0
margin_right = 267.0
margin_bottom = 224.0
rect_scale = Vector2( 1.5, 1.5 )

[node name="music" type="GridContainer" parent="H2/GridContainer"]
margin_right = 267.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="music" type="Label" parent="H2/GridContainer/music"]
margin_right = 131.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Music
volume"
align = 1
valign = 1

[node name="choose" type="GridContainer" parent="H2/GridContainer/music"]
margin_left = 135.0
margin_right = 266.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="minus" type="Button" parent="H2/GridContainer/music/choose"]
margin_left = 8.0
margin_top = 9.0
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "<"

[node name="value" type="Label" parent="H2/GridContainer/music/choose"]
margin_left = 45.0
margin_top = 13.0
margin_right = 86.0
margin_bottom = 29.0
size_flags_horizontal = 7
size_flags_vertical = 6
text = "5"
align = 1
valign = 1

[node name="plus" type="Button" parent="H2/GridContainer/music/choose"]
margin_left = 98.0
margin_top = 9.0
margin_right = 122.0
margin_bottom = 33.0
rect_min_size = Vector2( 24, 24 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = ">"

[node name="hideH2" type="Button" parent="H2/GridContainer"]
margin_left = 83.0
margin_top = 54.0
margin_right = 183.0
margin_bottom = 79.0
rect_min_size = Vector2( 100, 25 )
focus_mode = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
enabled_focus_mode = 0
text = "Back"

[node name="Cyber" type="Label" parent="."]
margin_left = 160.0
margin_top = 76.0
margin_right = 240.0
margin_bottom = 98.0
rect_scale = Vector2( 4.5, 4.5 )
rect_pivot_offset = Vector2( 40, 11 )
text = "Cyber Typer"
align = 1
valign = 1

[node name="Label2" type="Label" parent="."]
margin_left = 8.0
margin_top = 280.0
margin_right = 176.0
margin_bottom = 296.0
text = "Made by: @canova_games"
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 6 )
anims/RESET = SubResource( 7 )

[connection signal="button_up" from="H1/play" to="." method="_on_play_button_up"]
[connection signal="button_up" from="H1/options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="H2/GridContainer/music/choose/minus" to="." method="_on_minus_button_up"]
[connection signal="button_up" from="H2/GridContainer/music/choose/plus" to="." method="_on_plus_button_up"]
[connection signal="button_up" from="H2/GridContainer/hideH2" to="." method="_on_hideH2_button_up"]
